Fix Overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 
 * {
   font-family: var(--font-google-sans);
+  overflow-x: hidden;
 }
 
 button {
